[package]
name = "shard"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
async-std = { version = "1.12", features = ["attributes"] }
clap = { version = "4.4.8", features = ["derive", "cargo"] }
either = "1.9"
futures = "0.3.29"
libp2p = { version = "0.53.1", features = [ "async-std", "tokio", "identify", "gossipsub", "mdns", "cbor", "dns", "kad", "noise", "macros", "request-response", "tcp", "websocket", "yamux"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
void = "1.0.2"
tokio = { version = "1.34", features = ["full"] }
config = "0.13.1"
rand = "0.8.5"
gf256 = "0.3.0"
sha2 = "0.9.8"
cbor4ii = "0.3.1"
hex = "0.4.3"
sled = "0.34"
lazy_static = "1.4"
toml = "0.8.8"

[dev-dependencies]
criterion = "0.3"
